# Geometry

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  pixi.toml
.github/workflows/: build-test.yml  release.yml  update-lock-files.yml
apps/: CMakeLists.txt
cmake/: ShipAddSubsystem.cmake
doxygen/: Doxyfile
include/SHiPGeometry/: ConfigPath.h  Placement.h  SHiPGeometry.h  SHiPMaterials.h
scripts/: release.sh
src/: CMakeLists.txt  SHiPGeometry.cpp  SHiPMaterials.cpp
subsystems/: CMakeLists.txt
subsystems/Calorimeter/: CMakeLists.txt  README.md  calo.toml  test_calorimeter.cpp
subsystems/Calorimeter/include/Calorimeter/: CaloBarLayer.h  CaloFibreHPLayer.h  CalorimeterConfig.h  CalorimeterFactory.h
subsystems/Calorimeter/src/: CaloBarLayer.cpp  CaloFibreHPLayer.cpp  CalorimeterConfig.cpp  CalorimeterFactory.cpp
subsystems/Cavern/: CMakeLists.txt
subsystems/Cavern/include/Cavern/: CavernFactory.h
subsystems/Cavern/src/: CavernFactory.cpp
subsystems/DecayVolume/: CMakeLists.txt  README.md  sbt.toml  test_decayvolume.cpp
subsystems/DecayVolume/include/DecayVolume/: DecayVolumeFactory.h  SBTConfig.h  SBTSensorBuilder.h  SBTStructureBuilder.h
subsystems/DecayVolume/src/: DecayVolumeFactory.cpp  SBTConfig.cpp  SBTSensorBuilder.cpp  SBTStructureBuilder.cpp
subsystems/Magnet/: CMakeLists.txt
subsystems/Magnet/include/Magnet/: MagnetFactory.h
subsystems/Magnet/src/: MagnetFactory.cpp
subsystems/MuonShield/: CMakeLists.txt
subsystems/MuonShield/include/MuonShield/: MuonShieldFactory.h
subsystems/MuonShield/src/: MuonShieldFactory.cpp
subsystems/NeutrinoDetector/: CMakeLists.txt  README.md  test_neutrinodetector.cpp
subsystems/NeutrinoDetector/include/NeutrinoDetector/: NeutrinoDetectorFactory.h
subsystems/NeutrinoDetector/src/: NeutrinoDetectorFactory.cpp
subsystems/TimingDetector/: CMakeLists.txt
subsystems/TimingDetector/data/: timing_detector.gmx
subsystems/TimingDetector/include/TimingDetector/: SHiPTimingDetInterface.h  TimingDetectorFactory.h
subsystems/TimingDetector/src/: TimingDetectorFactory.cpp
subsystems/Trackers/: CMakeLists.txt  README.md  test_trackers.cpp
subsystems/Trackers/include/Trackers/: TrackersFactory.h
subsystems/Trackers/src/: TrackersFactory.cpp
subsystems/UpstreamTagger/: CMakeLists.txt  README.md  test_upstreamtagger.cpp
subsystems/UpstreamTagger/include/UpstreamTagger/: SHiPUBTManager.h  UpstreamTaggerFactory.h
subsystems/UpstreamTagger/src/: UpstreamTaggerFactory.cpp
tests/: CMakeLists.txt  test_configpath.cpp  test_consistency.cpp
